--- a/style.css
+++ b/style.css
@@ -468,6 +468,46 @@ background: rgb(181, 51, 51);
     
 }
 
+/* assign panel */
+
+.assign-panel {
+    position: absolute;
+    background: white;
+    padding: 12px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px #0002;
+    width: 220px;
+    z-index: 999;
+    color: #1f1b96;
+}
+
+.hidden {
+    display: none;
+}
+
+.assign-item {
+    display: flex;
+    justify-content: space-between;
+    margin: 6px 0;
+}
+
+.assign-item p {
+    margin: 0;
+}
+
+
+.assigned-workers span {
+    display: inline-block;
+    background: #007bff;
+    color: white;
+
+    border-radius: 4px;
+    margin: 2px 2px 0 0;
+    font-size: 20px;
+}
+
+
+
 @media (max-width:1023px) {
     .rooms {
         display: grid;
